Name:                hsautojump
Version:             0.1
-- Synopsis:            
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Steffen Siering
Maintainer:          steffen.siering <at> gmail <dot> com

-- A copyright notice.
-- Copyright:           

-- Category:            

Build-type:          Simple
Cabal-version:       >=1.2

Executable hsautojmp
  hs-source-dirs:       src
  Main-is: HsAutojump.hs
  
  -- Packages needed in order to build this package.
  Build-depends: haskell98 == 1.*, 
                 directory == 1.*, 
                 utf8-string == 0.3.*, 
                 base == 4.*, 
                 binary == 0.5.*, 
                 bytestring == 0.9.*,
                 bytestring-trie == 0.2.*,
                 unix == 2.4.*,
                 cautious-file == 0.1.*,
                 pcre-light-extra

  ghc-options: -O2 -optc -O3
  
